# ModLink-Studio

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-docs.yml  publish-npm-plugin-scaffold.yml  publish-official-driver-assets.yml  publish-python-packages-testpypi.yml  publish-python-packages.yml
apps/: __init__.py
apps/modlink_plugin_scaffold/: README.md  pyproject.toml
apps/modlink_plugin_scaffold/modlink_plugin_scaffold/: app.py
apps/modlink_plugin_scaffold/modlink_plugin_scaffold/core/: __init__.py  context.py  generator.py  spec.py  templates.py
apps/modlink_plugin_scaffold/modlink_plugin_scaffold/i18n/: __init__.py  catalog.py
apps/modlink_plugin_scaffold/modlink_plugin_scaffold/tui/: __init__.py  app.py  state.py  view.py
apps/modlink_server/: pyproject.toml
apps/modlink_server/modlink_server/: app.py  routes.py
apps/modlink_server/tests/: test_app.py
apps/modlink_studio/: app.py  pyproject.toml
apps/modlink_studio/modlink_studio/: __init__.py  app.py  debug_bootstrap.py  official_plugins.py  plugin_cli.py  startup.py
apps/modlink_studio/modlink_studio/plugin/: __init__.py  cli.py
apps/modlink_studio/tests/: test_app.py  test_builtin_driver_discovery.py  test_plugin_cli.py
apps/modlink_studio_qml/: pyproject.toml
apps/modlink_studio_qml/modlink_studio_qml/: __init__.py  app.py
apps/modlink_studio_qml/tests/: test_app.py
deprecated/: README.md
deprecated/src/openbciganglionui/adapters/: brainflow_adapter.py  factory.py
deprecated/src/openbciganglionui/backend/: CONTRACT.md  __init__.py
deprecated/src/openbciganglionui/platform/: acquisition.py  bus.py  models.py
docs/: modlink_apps.md  modlink_core.md  modlink_drivers.md  modlink_shared.md  modlink_streambus.md
packaging/: app.spec  mock_demo.spec
plugins/: README.md
plugins/host-camera/: README.md  pyproject.toml
plugins/host-camera/host_camera/: __init__.py  driver.py  factory.py
plugins/host-microphone/: README.md  pyproject.toml
plugins/host-microphone/host_microphone/: __init__.py  driver.py  factory.py
plugins/microphone_demo/: README.md  pyproject.toml
plugins/microphone_demo/microphone_demo/: __init__.py  driver.py
plugins/openbci-ganglion/: README.md  pyproject.toml
plugins/openbci-ganglion/openbci_ganglion/: driver.py  factory.py
plugins/openbciganglion/: README.md  pyproject.toml
plugins/openbciganglion/openbciganglion/: __init__.py  driver.py  factory.py
plugins/plane_demo/: README.md  pyproject.toml
plugins/plane_demo/plane_demo/: __init__.py  driver.py  factory.py
plugins/webcam/: README.md  pyproject.toml
plugins/webcam/webcam/: driver.py
scripts/: README.md  build_app.ps1  build_mock_demo.ps1  cli.py  export-docs.ps1
src/modlink/: README.md  __init__.py  __main__.py
src/modlink/acquisition/: task.py
src/modlink/bus/: __init__.py  stream_bus.py
src/modlink/device/: base.py
src/modlink/runtime/: __init__.py  composition.py
src/modlink/settings/: __init__.py
src/modlink/shared/: __init__.py
src/modlink/ui/: __init__.py
src/openbciganglionui/: __init__.py  app.py
src/openbciganglionui/adapters/: __init__.py
src/openbciganglionui/backend/: CONTRACT.md  __init__.py  base.py  factory.py  mock_backend.py  models.py  record_writer.py
src/openbciganglionui/core/: __init__.py
src/openbciganglionui/platform/: __init__.py  device.py  settings.py
src/openbciganglionui/session/: __init__.py  controller.py  models.py
src/openbciganglionui/ui/: __init__.py  display_settings.py  recording_settings.py
tools/modlink-plugin-author/: SKILL.md
tools/modlink-plugin-author/agents/: openai.yaml
tools/modlink_plugin_agent/: .env.example
tools/modlink_plugin_agent/modlink_plugin_agent/: __init__.py  agent.py  cli.py  client.py  env.py  scaffold.py  verifier.py  workspace.py
tools/modlink_plugin_agent/tests/: test_agent.py
tools/modlink_plugin_scaffold/: README.md  biome.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/: __init__.py  app.py
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/core/: generator.py  spec.py
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/i18n/: catalog.py
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/textual_app/: __init__.py  app.py  messages.py  state.py  styles.tcss
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/textual_app/screens/: __init__.py  completion.py  confirm.py
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/textual_app/services/: __init__.py  draft_logic.py  output.py  preview.py
tools/modlink_plugin_scaffold/modlink_plugin_scaffold/textual_app/widgets/: __init__.py  preview.py  sections.py  streams.py
tools/modlink_plugin_scaffold/src/: app.tsx  cli.tsx  render-app.tsx
tools/modlink_plugin_scaffold/src/hooks/: useLineEditor.ts
tools/modlink_plugin_scaffold/src/lib/: fs.ts  headless.ts  i18n.ts  spec.ts  state.ts  types.ts
tools/modlink_plugin_scaffold/src/templates/: render.ts
tools/modlink_plugin_scaffold/src/ui/: AppShell.tsx  Banner.tsx  EditorPane.tsx  EditorSurface.tsx  FooterStatus.tsx  OverwriteDialog.tsx  PreviewPane.tsx  ResultScreen.tsx  SectionTabs.tsx  rows.ts
tools/modlink_plugin_scaffold/tests/: app.test.tsx  fs.test.ts  headless.test.ts  render.test.ts  spec.test.ts  test_draft_logic.py  test_generator.py  test_textual_app.py
tools/modlink_plugin_scaffold_py/modlink_scaffold/: __init__.py  cli.py  generator.py  i18n.py  models.py  prompts.py  templates.py  validation.py
vpdocs/: api.md  app.md  core.md  index.md  install.md  sdk.md  server-api.md  ui.md
vpdocs/.vitepress/: config.mts
vpdocs/.vitepress/.temp/: @localSearchIndexroot.CFugVhR_.js  VPLocalSearchBox.BSpTns8Z.js  api.md.js  app.js  app.md.js  core.md.js  index.md.js  sdk.md.js  ui.md.js
vpdocs/.vitepress/theme/: Layout.vue  custom.css  index.ts
vpdocs/public/plugins/: index.json
(+49 files in other folders)
