[project]
name = "modlink-studio"
version = "0.3.0rc1"
description = "Host application bundle for ModLink Studio"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "packaging>=25.0",
    "platformdirs>=4.9.4",
    "pyqt6>=6.10.2",
    "pyqt6-fluent-widgets>=1.11.1",
    "pyqtgraph>=0.13.7",
    "scipy>=1.15.2",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "uvicorn>=0.37.0",
    "typer>=0.15.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"
Packages = "https://pypi.org/project/modlink-studio/"

[project.gui-scripts]
modlink-studio = "modlink_studio.app:main"

[project.scripts]
modlink-studio-debug = "modlink_studio.app:debug_main"
modlink-server = "modlink_server.app:main"
modlink-plugin = "modlink_studio.plugin.cli:main"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pyinstaller>=6.16.0",
    "rich>=14.3.3",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "E501",   # line length handled by formatter
    "N802",   # camelCase function names (Qt overrides, pyqtProperty)
    "N815",   # mixedCase class attributes (pyqtSignal)
    "N814",   # camelCase imports as constants (FluentIcon as FIF)
]

[tool.ruff.lint.per-file-ignores]
"packages/modlink_ui/**" = ["N"]
"apps/modlink_studio/**" = ["N"]
"**/tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "modlink_sdk",
    "modlink_core",
    "modlink_ui",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
modlink_studio = ["app_icon.png"]

[tool.setuptools.packages.find]
where = [
    "apps/modlink_studio",
    "apps/modlink_server",
    "packages/modlink_sdk",
    "packages/modlink_core",
    "packages/modlink_ui",
]
include = [
    "modlink_studio*",
    "modlink_server*",
    "modlink_sdk*",
    "modlink_core*",
    "modlink_ui*",
]
namespaces = false

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
norecursedirs = [
    ".pytest_cache",
    ".tmp-tests",
    "_tmp_runtime*",
    "pytest-cache-files-*",
    "ModLink-Studio-Plugins",
    "build",
    "dist",
    "node_modules",
]
