[project]
name = "modlink-plugin-scaffold"
version = "0.1.0"
description = "Interactive scaffold generator for ModLink driver plugins"
requires-python = ">=3.13"
dependencies = [
    "readchar>=4.2.1",
    "rich>=14.3.3",
]

[project.scripts]
modlink-plugin-scaffold = "modlink_plugin_scaffold.app:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
