[project]
name = "modlink-server-internal"
version = "0.2.0rc3"
description = "Internal packaging stub for the FastAPI ModLink Studio host"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "modlink-core",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"

[project.scripts]
modlink-server = "modlink_server.app:main"

[tool.uv.sources]
modlink-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
