[project]
name = "modlink-studio-internal"
version = "0.2.0"
description = "Internal packaging stub for the Qt Widgets ModLink Studio host"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "modlink-core",
    "modlink_ui_qt_widgets",
    "pyqt6>=6.10.2",
    "pyqt6-fluent-widgets>=1.11.1",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"

[project.gui-scripts]
modlink-studio = "modlink_studio.app:main"

[tool.uv.sources]
modlink-core = { workspace = true }
modlink_ui_qt_widgets = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
