[project]
name = "modlink-studio-qml"
version = "0.2.0"
description = "QML application entrypoint for ModLink Studio"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "modlink-core",
    "modlink_ui_qt_qml",
    "pyqt6>=6.10.2",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"
Packages = "https://dl.cloudsmith.io/public/xylt-space/modlink-studio/python/simple/"

[project.gui-scripts]
modlink-studio-qml = "modlink_studio_qml.app:main"

[tool.uv.sources]
modlink-core = { workspace = true }
modlink_ui_qt_qml = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
