[project]
name = "modlink-plugin-host-camera"
version = "0.2.0rc1"
description = "Host camera driver plugin for ModLink Studio"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "modlink-studio>=0.2.0rc1,<0.3.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"

[project.entry-points."modlink.drivers"]
host-camera = "host_camera.factory:create_driver"

[tool.uv.sources]
modlink-studio = { path = "../..", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "host_camera"
module-root = ""
