[project]
name = "modlink-plugin-host-microphone"
version = "0.2.0rc2"
description = "Host microphone driver plugin for ModLink Studio"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "modlink-studio>=0.2.0rc2,<0.3.0",
    "numpy>=2.3.3",
    "sounddevice",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"

[project.entry-points."modlink.drivers"]
host-microphone = "host_microphone.factory:create_driver"

[tool.uv.sources]
modlink-studio = { path = "../..", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "host_microphone"
module-root = ""
