[project]
name = "modlink-plugin-openbci-ganglion"
version = "0.1.0"
description = "OpenBCI Ganglion driver plugin for ModLink Studio"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "modlink-sdk",
    "brainflow",
    "bleak",
    "numpy>=2.3.3",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"
Packages = "https://dl.cloudsmith.io/public/xylt-space/modlink-studio/python/simple/"

[project.entry-points."modlink.drivers"]
openbci-ganglion = "openbci_ganglion.factory:create_driver"

[tool.uv.sources]
modlink-sdk = { path = "../../packages/modlink_sdk", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openbci_ganglion"
module-root = ""
