[project]
name = "modlink-plugin-openbci-ganglion"
version = "0.2.0"
description = "OpenBCI Ganglion driver plugin for ModLink Studio"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "modlink-studio>=0.2.0,<0.3.0",
    "brainflow",
    "bleak",
    "numpy>=2.3.3",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"

[project.entry-points."modlink.drivers"]
openbci-ganglion = "openbci_ganglion.factory:create_driver"

[tool.uv.sources]
modlink-studio = { path = "../..", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openbci_ganglion"
module-root = ""
