[project]
name = "openbciganglion"
version = "0.1.0"
description = "OpenBCI Ganglion driver plugin for ModLink Studio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modlink-sdk",
    "brainflow",
    "bleak",
    "numpy>=2.3.3",
    "pyserial",
]

[project.entry-points."modlink.drivers"]
openbciganglion = "openbciganglion.factory:create_driver"

[tool.uv.sources]
modlink-sdk = { path = "../../packages/modlink_sdk", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
