[project]
name = "webcam"
version = "0.1.0"
description = "Webcam driver plugin for ModLink Studio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modlink-sdk",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0",
]

[project.entry-points."modlink.drivers"]
webcam = "webcam.factory:create_driver"

[tool.uv.sources]
modlink-sdk = { path = "../../packages/modlink_sdk", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
