[project]
name = "modlink-plugin-scaffold"
version = "0.2.0"
description = "Interactive scaffold generator for ModLink driver plugins"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.79.1",
]

[project.urls]
Homepage = "https://github.com/modlink-studio/ModLink-Studio"
Repository = "https://github.com/modlink-studio/ModLink-Studio"
Documentation = "https://modlink-studio.github.io"
Issues = "https://github.com/modlink-studio/ModLink-Studio/issues"
Packages = "https://dl.cloudsmith.io/public/xylt-space/modlink-studio/python/simple/"

[project.scripts]
modlink-plugin-scaffold = "modlink_plugin_scaffold.app:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
